# rooms

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose-global.yaml  docker-compose-global.yml  docker-compose-local-db.yaml  example.env  pyproject.toml
.github/workflows/: deploy.yaml  pre-commit.yml  tests.yml
alembic/: env.py
alembic/versions/: 02dd4f72a602_add_expiration_date_to_invitations.py  2023-11-07_14-01_859c79cfe1b5_base.py  2023-12-22_19-14_c365f238a8d2_rename_user_telegram_id_user_id.py  2023-12-25_00-59_e0547a6dc25d_allow_one_user_to_repeat_within_on_order.py  2023-12-26_01-28_65a1829d32d0_fix_typo_tasks_descriprion_to_tasks_.py  2023-12-26_02-20_2aae965676de_add_room_id_column_to_orders_table.py  2024-01-02_04-18_6d339f52f632_fix_typo_invitations_adressee_id_to_.py  2024-01-21_14-35_dcbfb8860b7a_invitations_refer_to_users_by_alias.py  2024-01-21_19-56_02dd4f72a602_add_expiration_date_to_invitations.py  2024-05-13_12-39_e7cae737ebe3_add_alias_field_to_user.py  2024-05-17_01-06_eebf318a4b86_use_bigint_in_foreign_user_isd.py  2024-05-18_15-24_9a560e119420_add_fullname_column_to_users.py  2024-08-06_12-17_b27ab6e05438_add_room_rules.py  2024-08-08_13-00_de71cfac0ab1_add_manual_tasks.py  2024-08-08_14-06_0ebe95bd6b25_fix_executors_keys.py  2024-10-13_01-30_88e673b84a4c_separate_orders_for_tasks.py  2aae965676de_add_room_id_column_to_orders_table.py  65a1829d32d0_fix_typo_tasks_descriprion_to_tasks_.py  6d339f52f632_fix_typo_invitations_adressee_id_to_.py  859c79cfe1b5_.py  af1efa064d3c_change_user_id_type_to_big_integer.py  c365f238a8d2_rename_user_telegram_id_user_id.py  dcbfb8860b7a_invitations_refer_to_users_by_alias.py  e0547a6dc25d_allow_one_user_to_repeat_within_on_order.py
scripts/: clear_db.py
src/: config.py  main.py
src/api/: exception_handlers.py  exceptions.py  utils.py
src/api/auth/: utils.py
src/api/routes/: bot.py
src/api/routes/bot/: __init__.py  invitation.py  order.py  room.py  rule.py  task.py  user.py
src/api/routes/bot/manual_task/: exceptions.py  input_schemas.py  output_schemas.py  router.py
src/api/routes/bot/periodic_task/: input_schemas.py  output_schemas.py  router.py
src/db_sessions/: __init__.py  sqlalchemy_session.py
src/models/sql/: __init__.py  executor.py  invitation.py  manual_task.py  mixins.py  order.py  room.py  rule.py  task.py  task_executor.py  user.py
src/repositories/: base_repository.py
src/schemas/: db_schemas.py  method_input_schemas.py  method_output_schemas.py  room.py  task.py  user.py
tests/: test_auth.py  test_methods.py
